--- a/index.html
+++ b/index.html
@@ -1,59 +1,43 @@
 <!DOCTYPE html>
-<html lang=pt-br>
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>GFiirst</title>    
+        <title>Projeto</title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
-    <body><div>
-        <h1>
-            hello mundo
-        </h1>
-        <h2>
-            ola mundo
-        </h2>
-        <h3>
-                ola mundo
-        </h3>
-        <p>      
-            hello mundo 
-        </p>
-        <table>
-            <tr>
-                <th>|nome|</th>
-                <th>|idade|</th>
-                <th>|função|</th>
-                <th>|materia preferida|</th>
-            </tr>
-            <tr>
-                    <td>geovane</td>
-                    <td>19</td>
-                    <td>aluno</td>
-                    <td>matematica</td>
-            </tr>
-            <tr>
-                    <td>Fiirst</td>
-                    <td>20</td>
-                    <td>aluno</td>
-                    <td>fisica</td>
-            </tr>
-            <tr>
-                    <td>thiago</td>
-                    <td>69</td>
-                    <td>aluno</td>
-                    <td>lingua inglesa</td>
-            </tr>
-        </table>
-        <ul>
-            <li><b>item1</b></li>
-            <li><i>item2</i></li>
-            <li><u>item3</u></li>
-        </ul>
-        <ol>
-                <li><S>item1</S></li>
-                <li>item2</li>
-                <li>item3</li>
-        </ol>
-        
-        </div>
+    <body>
+        <header>
+            <div class="logo">
+                <h3>minha primeira</h3>
+                <h2>Landing Page</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>inicio</li>
+                    <li>quem sou eu?</li>
+                    <li>contato</li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <img src="" alt="">
+            <div class="titulo">
+                <h1>Quer saber mais?</h1>
+                <p>  
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                     Sunt totam possimus nihil officiis, eveniet fugiat aperiam excepturi <br>
+                     officia impedit consequuntur quos iure necessitatibus voluptates, opti<br>
+                     o accusamus sint? Inventore, nobis ipsa. Lorem ipsum dolor, sit amet <br>
+                     consectetur adipisicing elit. Est provident ad libero ducimus unde magni <br>
+                     placeat? Pariatur expedita sequi harum. Alias animi quisquam deleniti <br>
+                     adipisci autem quod illo. Eaque, quidem.<br>
+                </p>
+            </div>
+            <form class="login">
+                <input type="text">
+                <input type="Email">
+                <input type="submit">
+            </form>
+        </main>
     </body>
 </html>
