--- a/index.html
+++ b/index.html
@@ -8,36 +8,39 @@
     <body>
         <header>
             <div class="logo">
-                <h3>minha primeira</h3>
+                <h3>Minha primeira</h3>
                 <h2>Landing Page</h2>
             </div>
             <div class="menu">
                 <ul>
-                    <li>inicio</li>
-                    <li>quem sou eu?</li>
-                    <li>contato</li>
+                    <a href="#"><li>inicio</li></a>
+                    <a href="#"><li>quem sou eu?</li></a>
+                    <a href="#"><li>contato</li></a>
                 </ul>
             </div>
         </header>
+
         <main>
-            <img src="" alt="">
+            <div>
+                <img src="./style/undraw_interior_design_re_7mvn.svg" alt="image">
+            </div>
             <div class="titulo">
                 <h1>Quer saber mais?</h1>
                 <p>  
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Sunt totam possimus nihil officiis, eveniet fugiat aperiam excepturi <br>
-                     officia impedit consequuntur quos iure necessitatibus voluptates, opti<br>
-                     o accusamus sint? Inventore, nobis ipsa. Lorem ipsum dolor, sit amet <br>
-                     consectetur adipisicing elit. Est provident ad libero ducimus unde magni <br>
-                     placeat? Pariatur expedita sequi harum. Alias animi quisquam deleniti <br>
-                     adipisci autem quod illo. Eaque, quidem.<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                     Sunt totam possimus nihil officiis, eveniet fugiat aperiam excepturi 
+                     officia impedit consequuntur quos iure necessitatibus voluptates, opti
+                     o accusamus sint? Inventore, nobis ipsa. Lorem ipsum dolor, sit amet 
+                     consectetur adipisicing elit. Est provident ad libero ducimus unde magni 
+                     placeat? Pariatur expedita sequi harum. Alias animi quisquam deleniti 
+                     adipisci autem quod illo. Eaque, quidem.
                 </p>
+                <form class="login">
+                    <input type="text" placeholder="Nome">
+                    <input type="Email" placeholder="E-mail">
+                    <input id="btn-enviar" type="submit">
+                </form>
             </div>
-            <form class="login">
-                <input type="text">
-                <input type="Email">
-                <input type="submit">
-            </form>
         </main>
     </body>
 </html>
